fix /spectate erroring out